--- a/apps/collector/package.json
+++ b/apps/collector/package.json
@@ -7,18 +7,20 @@
     "postinstall": "playwright install"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
     "@browserbasehq/sdk": "^2.6.0",
     "@browserbasehq/stagehand": "^2.4.0",
     "@playwright/test": "^1.49.1",
+    "ai": "^4.3.16",
     "boxen": "^8.0.1",
     "chalk": "^5.3.0",
     "dotenv": "^16.4.7",
-    "zod": "^3.22.4",
-    "ai": "^4.3.16",
-    "@ai-sdk/openai": "^1.3.22",
-    "openai": "^5.8.2"
+    "openai": "^5.8.2",
+    "yargs": "^18.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/yargs": "^17.0.33",
     "tsx": "^4.19.2",
     "typescript": "^5.0.0"
   },
