--- a/apps/collector/.env.example
+++ b/apps/collector/.env.example
@@ -1,6 +1,6 @@
-BROWSERBASE_PROJECT_ID="YOUR_BROWSERBASE_PROJECT_ID"
-BROWSERBASE_API_KEY="YOUR_BROWSERBASE_API_KEY"
+# AI API Keys (required - for OpenRouter)
 OPENROUTER_API_KEY="YOUR_OPENROUTER_API_KEY"
-OPENAI_API_KEY="THIS_IS_OPTIONAL_WITH_ANTHROPIC_KEY"
-ANTHROPIC_API_KEY="THIS_IS_OPTIONAL_WITH_OPENAI_KEY"
-GOOGLE_API_KEY="YOUR_GOOGLE_API_KEY"
+
+# Database Configuration (required)
+# Local PostgreSQL
+DATABASE_URL="postgresql://username:password@localhost:5432/collector_db"
