--- a/apps/collector/package.json
+++ b/apps/collector/package.json
@@ -4,7 +4,11 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsx index.ts",
-    "postinstall": "playwright install"
+    "postinstall": "playwright install",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
@@ -15,12 +19,16 @@
     "boxen": "^8.0.1",
     "chalk": "^5.3.0",
     "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.44.2",
     "openai": "^5.8.2",
+    "pg": "^8.16.3",
     "yargs": "^18.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/pg": "^8.15.4",
     "@types/yargs": "^17.0.33",
+    "drizzle-kit": "^0.31.4",
     "tsx": "^4.19.2",
     "typescript": "^5.0.0"
   },
