chore: batch-collect
Signed-off-by: Zhiqiang ZHOU <im@strrl.dev>

--- a/apps/collector/.env.example
+++ b/apps/collector/.env.example
@@ -1,6 +1,12 @@
 # AI API Keys (required - for OpenRouter)
 OPENROUTER_API_KEY="YOUR_OPENROUTER_API_KEY"
+OPENROUTER_MODEL_NAME="deepseek/deepseek-chat-v3-0324:free"
 
 # Database Configuration (required)
 # Local PostgreSQL
 DATABASE_URL="postgresql://username:password@localhost:5432/collector_db"
+
+# Debug Configuration (optional)
+# Enable debug logs: DEBUG="collector:*"
+# Enable specific debug logs: DEBUG="collector:batch-collect:info,collector:batch-collect:error"
+# DEBUG="collector:*"
