--- a/apps/collector/package.json
+++ b/apps/collector/package.json
@@ -18,6 +18,7 @@
     "ai": "^4.3.16",
     "boxen": "^8.0.1",
     "chalk": "^5.3.0",
+    "debug": "^4.4.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.44.2",
     "openai": "^5.8.2",
